--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -1,30 +1,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>io.github.manami</groupId>
-        <artifactId>parent</artifactId>
-        <version>${manami.version}</version>
-        <relativePath>../</relativePath>
-    </parent>
-    <artifactId>gui</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>io.github.manami</groupId>
-            <artifactId>core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.github.manami</groupId>
-            <artifactId>cache</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.controlsfx</groupId>
-            <artifactId>controlsfx</artifactId>
-        </dependency>
-    </dependencies>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>io.github.manami</groupId>
+    <artifactId>parent</artifactId>
+    <version>2.15.1</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
+  <artifactId>gui</artifactId>
+  <dependencies>
+    <dependency>
+      <groupId>io.github.manami</groupId>
+      <artifactId>core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.github.manami</groupId>
+      <artifactId>cache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+    </dependency>
+  </dependencies>
 </project>
