--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -5,8 +5,8 @@
   <parent>
     <groupId>io.github.manami</groupId>
     <artifactId>parent</artifactId>
-    <version>${manami.version}</version>
-    <relativePath>../</relativePath>
+    <version>2.15.1</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>persistence</artifactId>
   <dependencies>
@@ -60,6 +60,11 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib</artifactId>
+      <version>1.2.0</version>
     </dependency>
   </dependencies>
 </project>
