--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,16 +26,8 @@
       <artifactId>cache</artifactId>
     </dependency>
     <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
+      <groupId>io.github.manami</groupId>
+      <artifactId>common</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -52,10 +44,6 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
