--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,16 @@
         <artifactId>httpclient</artifactId>
         <version>4.5.3</version>
       </dependency>
+      <dependency>
+        <groupId>org.eclipse.jgit</groupId>
+        <artifactId>org.eclipse.jgit</artifactId>
+        <version>4.10.0.201712302008-r</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.2</version>
+      </dependency>
 
       <!-- testing -->
       <dependency>
