--- a/core/pom.xml
+++ b/core/pom.xml
@@ -34,8 +34,8 @@
       <artifactId>httpclient</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
+      <groupId>com.nhaarman</groupId>
+      <artifactId>mockito-kotlin</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
