--- a/pom.xml
+++ b/pom.xml
@@ -139,9 +139,9 @@
 
       <!-- testing -->
       <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <version>2.13.0</version>
+        <groupId>com.nhaarman</groupId>
+        <artifactId>mockito-kotlin</artifactId>
+        <version>1.5.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
