--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,16 @@
         <artifactId>gson</artifactId>
         <version>2.8.2</version>
       </dependency>
+      <dependency>
+        <groupId>net.sourceforge.nekohtml</groupId>
+        <artifactId>nekohtml</artifactId>
+        <version>1.9.22</version>
+      </dependency>
+      <dependency>
+        <groupId>khttp</groupId>
+        <artifactId>khttp</artifactId>
+        <version>0.1.0</version>
+      </dependency>
 
       <!-- kotlin -->
       <dependency>
