Kotlin: Added jcenter to be able to retrieve khttp

--- a/pom.xml
+++ b/pom.xml
@@ -362,4 +362,10 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+  <repositories>
+    <repository>
+      <id>jcenter</id>
+      <url>http://jcenter.bintray.com/</url>
+    </repository>
+  </repositories>
 </project>
