--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <kotlin.version>1.2.41</kotlin.version>
     <kotlin.compiler.apiVersion>1.2</kotlin.compiler.apiVersion>
+    <kotlin.compiler.languageVersion>1.2</kotlin.compiler.languageVersion>
   </properties>
 
   <dependencyManagement>
