--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <slf4j.version>1.7.25</slf4j.version>
     <java.target.version>1.8</java.target.version>
     <manami.version>3.0.0</manami.version>
+    <spek.version>1.1.5</spek.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <kotlin.version>1.2.41</kotlin.version>
     <kotlin.compiler.apiVersion>1.2</kotlin.compiler.apiVersion>
@@ -159,7 +160,7 @@
       <dependency>
         <groupId>org.jetbrains.spek</groupId>
         <artifactId>spek-api</artifactId>
-        <version>1.1.5</version>
+        <version>${spek.version}</version>
         <scope>test</scope>
         <exclusions>
           <exclusion>
@@ -171,7 +172,7 @@
       <dependency>
         <groupId>org.jetbrains.spek</groupId>
         <artifactId>spek-junit-platform-engine</artifactId>
-        <version>1.1.5</version>
+        <version>${spek.version}</version>
         <scope>test</scope>
         <exclusions>
           <exclusion>
@@ -183,13 +184,13 @@
       <dependency>
         <groupId>org.junit.platform</groupId>
         <artifactId>junit-platform-runner</artifactId>
-        <version>1.0.2</version>
+        <version>1.2.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>5.0.2</version>
+        <version>5.2.0</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
