--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.6</version>
+        <version>3.7</version>
       </dependency>
       <dependency>
         <groupId>commons-validator</groupId>
@@ -92,7 +92,7 @@
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.5</version>
+        <version>2.6</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -104,7 +104,7 @@
       <dependency>
         <groupId>org.json</groupId>
         <artifactId>json</artifactId>
-        <version>20170516</version>
+        <version>20171018</version>
       </dependency>
       <dependency>
         <groupId>org.controlsfx</groupId>
@@ -114,7 +114,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>23.0</version>
+        <version>25.0-jre</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jgit</groupId>
@@ -151,7 +151,7 @@
       <dependency>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-stdlib</artifactId>
-        <version>1.2.41</version>
+        <version>${kotlin.version}</version>
       </dependency>
 
       <!-- testing -->
