--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -18,12 +18,9 @@
       <artifactId>core</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.github.manamiproject.manami</groupId>
-      <artifactId>cache</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
+      <groupId>no.tornado</groupId>
+      <artifactId>tornadofx</artifactId>
+      <version>1.7.16</version>
     </dependency>
     <dependency>
       <groupId>org.controlsfx</groupId>
