--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
         <artifactId>khttp</artifactId>
         <version>0.1.0</version>
       </dependency>
+      <dependency>
+        <groupId>no.tornado</groupId>
+        <artifactId>tornadofx</artifactId>
+        <version>1.7.16</version>
+      </dependency>
 
       <!-- kotlin -->
       <dependency>
